[package]
name = "egui-macroquad"
version = "0.16.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme = "README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = "^0.28"
egui-miniquad = { git = "https://github.com/Querijn/egui-miniquad.git" }
macroquad = { git = "https://github.com/Querijn/macroquad-hotreload.git" }

[features]
default = ["audio"]
audio = ["macroquad/audio"]

[dev-dependencies]
egui_demo_lib = "^0.28"

[profile.release]
opt-level = 2
